@@ -1,8 +1,11 @@
+// It does not work. Maybe some of the logic is in TabItem, TabPanel, etc.
+using Mono.WindowsPresentationFoundation;
 using System;
 using System.Collections.Specialized;
 using System.ComponentModel;
 using System.Windows.Automation.Peers;
 using System.Windows.Input;
+using System.Windows.Controls.Primitives;
 #if Implementation
 using System.Windows;
 using System.Windows.Controls;
@@ -73,16 +76,24 @@ namespace System.Windows.Controls {
 		#region Public Methods
 		public override void OnApplyTemplate() {
 			base.OnApplyTemplate();
+			//ContentPresenter selected_content_host = GetTemplateChild("PART_SelectedContentHost") as ContentPresenter;
+			//if (selected_content_host == null)
+			//    return;
+			//Utility.SetBinding(selected_content_host, ContentPresenter.ContentTemplateProperty, this, "ContentTemplate");
+			//Utility.SetBinding(selected_content_host, ContentPresenter.ContentTemplateSelectorProperty, this, "ContentTemplateSelector");
+
+			if (SelectedItem != null)
+				SetSelectedPropertiesValue((TabItem)SelectedItem);
 		}
 		#endregion
 
 		#region Protected Methods
 		protected override DependencyObject GetContainerForItemOverride() {
-			return base.GetContainerForItemOverride();
+			return new TabItem();
 		}
 
 		protected override bool IsItemItsOwnContainerOverride(object item) {
-			return base.IsItemItsOwnContainerOverride(item);
+			return item is TabItem;
 		}
 
 		protected override AutomationPeer OnCreateAutomationPeer() {
@@ -95,10 +106,17 @@ namespace System.Windows.Controls {
 
 		protected override void OnInitialized(EventArgs e) {
 			base.OnInitialized(e);
+			if (SelectedItem != null)
+				SetSelectedPropertiesValue((TabItem)SelectedItem);
 		}
 
 		protected override void OnItemsChanged(NotifyCollectionChangedEventArgs e) {
 			base.OnItemsChanged(e);
+			if (e.NewItems.Count >= 1) {
+				TabItem tab_item = e.NewItems[0] as TabItem;
+				if (tab_item != null)
+					;
+			}
 		}
 
 		protected override void OnKeyDown(KeyEventArgs e) {
@@ -107,6 +125,22 @@ namespace System.Windows.Controls {
 
 		protected override void OnSelectionChanged(SelectionChangedEventArgs e) {
 			base.OnSelectionChanged(e);
+			//if (Parent == null)
+			//	return;
+			if (e.AddedItems.Count == 0)
+				return;
+			TabItem tab_item = e.AddedItems[0] as TabItem;
+			if (tab_item == null)
+				return;
+			SetSelectedPropertiesValue(tab_item);
+		}
+		#endregion
+
+		#region Private Methods
+		void SetSelectedPropertiesValue(TabItem selectedTabItem) {
+			SelectedContent = selectedTabItem.Content;
+			SelectedContentTemplate = selectedTabItem.ContentTemplate ?? ContentTemplate;
+			SelectedContentTemplateSelector = selectedTabItem.ContentTemplateSelector ?? ContentTemplateSelector;
 		}
 		#endregion
 	}
